Editing the nuspec and project to have the correct dependencies exposed

--- a/nuspecs/Hangfire.Core.nuspec
+++ b/nuspecs/Hangfire.Core.nuspec
@@ -168,8 +168,11 @@
     </releaseNotes>
     <dependencies>
       <group targetFramework="net45">
+        <dependency id="Microsoft.Owin" version="3.0.1" />
         <dependency id="Owin" version="1.0" />
         <dependency id="Newtonsoft.Json" version="5.0.1" />
+        <dependency id="ncrontab" version="3.1.0" />
+        <dependency id="CronExpressionDescriptor" version="1.21.0" />
       </group>
       <group targetFramework="netstandard1.3">
         <dependency id="Microsoft.NETCore.Portable.Compatibility" version="1.0.1" />
